lab1/Test/L1-A-1-25.cmm
struct {
  struct f3pbjkO7V26nH {
else   }aOKwaNyUA2 [ 2084994931 ] ;
}ENPv0GTfGq [ 1304187887 ] [ 448992290 QCp43k6LfgyMo6bqP 
  ] 
;
!= float 